@@ -18,8 +18,6 @@ default_branch = main
 workflow = linux
 workflow = macos
 workflow = windows
-workflow = cygwin
-workflow = msys2-mingw
 
 [Author::Plicease::Core]
 
